<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ELectureActivity!</string>
    <string name="app_name">C.A.R.E.</string>
    <string name="w_button">What Type of Carseat?</string>
    <string name="Age">Age</string>
    <string name="Weight">Weight</string>
    <string name="Height">Height</string>
    <string-array name="ages_array">
        <item >--Age--</item>
        <item >&lt;1</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
        <item >&gt;8</item>
        
    </string-array>
    <string-array name="height_array">
        <item >--Height(cm)--</item>
        <item >&lt;90</item>
        <item >94</item>
        <item >96</item>
        <item >99</item>
        <item >102</item>
        <item >104</item>
        <item >107</item>
        <item >109</item>
        <item >112</item>
        <item >114</item>
        <item >117</item>
        <item >119</item>
        <item >122</item>
        <item >124</item>
        <item >127</item>
        <item >129</item>
        <item >132</item>
        <item >134</item>
        <item >137</item>
        <item >140</item>
        <item >142</item>
        <item >145</item>
        <item >147</item>
        <item >150</item>
        <item >&gt;152</item>
    </string-array>
    <string-array name="weight_array">
        <item >--Weight(lbs)--</item>
        <item >&lt;20</item>
        <item >20</item>
        <item >25</item>
        <item >30</item>
        <item >35</item>
        <item >40</item>
        <item >45</item>
        <item >50</item>
        <item >55</item>
        <item >60</item>
        <item >65</item>
        <item >70</item>
        <item >75</item>
        <item >80</item>
        <item >&gt;80</item>        
    </string-array>
    <string name="name">Carseat Name</string>
    <string name="type">Carseat Type</string>
    <string name="details">Carseat Details</string>
    <string name="price">Carseat Price</string>
    <string name="type_button">Type</string>
    <string name="nameBox">Enter Search Text</string>
    <string name="searchButton">Search</string>
    <string-array name="rating_array">
        <item >0</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
    </string-array>
    <string-array name="order_array">
        <item >Ascending</item>
        <item >Descending</item>
    </string-array>
    <string-array name="sort_array">
        <item >Name</item>
        <item >Price</item>
        <item >User Rating</item>
    </string-array>
    <string-array name="brand_array">
        <item >Any</item>
        <item >Clek</item>
    </string-array>
</resources>
